--- a/src/sass/_experience.scss
+++ b/src/sass/_experience.scss
@@ -2,6 +2,11 @@
 	.timeline {
 		margin-top: 2rem;
 
+		.vertical-timeline {
+			padding: 1rem !important;
+			overflow: visible !important;
+		}
+
 		.timeline-image {
 			width: 3rem;
 			height: 3rem;
@@ -11,6 +16,12 @@
 		.date {
 			@include mq(768px) {
 				display: none;
+			}
+		}
+
+		.round {
+			@include mq(768px) {
+				margin-left: 0.3rem;
 			}
 		}
 
